hugr-llvm/src/snapshots/hugr_llvm__sum__test__build_untag_tag@nofields.snap
---
source: hugr-llvm/src/sum.rs
expression: module.to_string()
---
define i2 @untag_tag(i2 %0) {
  ret i2 -2
}
