hugr-llvm/src/snapshots/hugr_llvm__sum__test__build_untag_tag@nofields_elided_fields.snap
---
source: hugr-llvm/src/sum.rs
expression: module.to_string()
---
define i1 @untag_tag(i1 %0) {
  ret i1 false
}
