hugr-llvm/src/snapshots/hugr_llvm__sum__test__build_untag_tag@two_variant_one_field.snap
---
source: hugr-llvm/src/sum.rs
expression: module.to_string()
---
define { i1, i1 } @untag_tag({ i1, i1 } %0) {
  %2 = extractvalue { i1, i1 } %0, 0
  ret { i1, i1 } { i1 true, i1 poison }
}
