hugr-llvm/src/snapshots/hugr_llvm__sum__test__build_untag_tag@unit.snap
---
source: hugr-llvm/src/sum.rs
expression: module.to_string()
---
define {} @untag_tag({} %0) {
  ret {} undef
}
